--- a/app.view/css/style.css
+++ b/app.view/css/style.css
@@ -28,7 +28,7 @@ strong
 h1,h2,h3,h4,h5,h6
 {
     font-weight:    bold;
-    margin-bottom:         20px;
+    margin-bottom:  10px;
 }
 
 h1
@@ -94,7 +94,11 @@ p
     color:              white;
 
     text-align:         center;
+}
 
+header h1
+{
+    margin-bottom: 0px;
 }
 
 /*
